# children-of-israel-agent-swarm

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_swarm.py
children_of_israel/: __init__.py  agent_state.py  checkpointing.py  commandment_advisor.py  composer.py  constitution_enforcer.py  health.py  hermes_node.py  llm.py  moses.py  observability.py  oral_law_engine.py  precedent_store.py
children_of_israel/intake/: validate_task.py
children_of_israel/tribes/: __init__.py  tribe_asher.py  tribe_benjamin.py  tribe_dan.py  tribe_gad.py  tribe_issachar.py  tribe_joseph.py  tribe_judah.py  tribe_levi.py  tribe_naphtali.py  tribe_reuben.py  tribe_simeon.py  tribe_zebulun.py
config/: hermes_pipeline.yaml  mission.yaml
docs/: ECOSYSTEM_PLAN.md  integration.md  jethro_hierarchy.md
integrations/: README.md
k8s/: configmap.yaml  namespace.yaml  secrets-template.yaml  swarm-deployment.yaml  tier4-hpa.yaml
law/: commandments.yaml  commandments_theme4.yaml  commandments_theme5.yaml  constitution.yaml  oral_law.yaml
law/tribes/: tribes.yaml
missions/: README.md
scripts/: run_e2e_demo.py
src/execution/: run-task.ts
src/intake/: validate-task.ts
src/outputs/: emit-artifact.ts
tests/: conftest.py  test_audit.py  test_constitution.py  test_law_layer.py  test_oral_law.py
