[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "children-of-israel-agent-swarm"
version = "0.1.0"
description = "A multi-agent swarm orchestration system built on LangGraph"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
    # Orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    # LLM providers
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    # Config & serialization
    "pyyaml>=6.0.1",
    "pydantic>=2.7.0",
    "typing-extensions>=4.11.0",
    # Checkpointing
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    "langgraph-checkpoint-redis>=0.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    # Health endpoint
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
run-swarm = "run_swarm:main"

[tool.hatch.build.targets.wheel]
packages = ["children_of_israel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]
